// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllGroupsSettingsRow renders correctly 1`] = `
<SettingsRow
  imageUrl="/hylo-merkaba.png"
  name="All Groups"
  settings={
    Object {
      "sendEmail": true,
    }
  }
  update={[Function]}
/>
`;

exports[`MembershipSettingsRow renders correctly 1`] = `
<SettingsRow
  imageUrl="foo.png"
  name="Foomunity"
  settings={
    Object {
      "sendEmail": true,
    }
  }
  update={[Function]}
/>
`;

exports[`MessageSettingsRow renders correctly 1`] = `
<SettingsRow
  iconName="Messages"
  name="Messages"
  settings={
    Object {
      "sendEmail": true,
    }
  }
  update={[Function]}
/>
`;

exports[`NotificationSettingsTab renders correctly 1`] = `
<div>
  <div
    data-stylename="title"
  >
    Notifications
  </div>
  <div
    data-stylename="prompt"
  >
    How often would you like to receive email digests for new posts in your groups and saved searches?
  </div>
  <Select
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": "daily",
          "label": "Daily",
        },
        Object {
          "id": "weekly",
          "label": "Weekly",
        },
        Object {
          "id": "never",
          "label": "Never",
        },
      ]
    }
    selected="daily"
  />
  <div
    data-stylename="prompt"
  >
    How would you like to receive notifications about new comments on posts you're following?
  </div>
  <Select
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": "none",
          "label": "None",
        },
        Object {
          "id": "email",
          "label": "Email",
        },
        Object {
          "id": "push",
          "label": "Mobile App",
        },
        Object {
          "id": "both",
          "label": "Both",
        },
      ]
    }
    selected="email"
  />
  <div>
    <MessageSettingsRow
      updateMessageSettings={[Function]}
    />
    <AllGroupsSettingsRow
      updateAllGroups={[Function]}
    />
    <MembershipSettingsRow
      key="1"
      membership={
        Object {
          "id": 1,
        }
      }
      updateMembershipSettings={[Function]}
    />
    <MembershipSettingsRow
      key="2"
      membership={
        Object {
          "id": 2,
        }
      }
      updateMembershipSettings={[Function]}
    />
  </div>
  <div
    data-stylename="help"
  >
    <p
      data-stylename="help-paragraph"
    >
      Download our
      <a
        href="https://itunes.apple.com/app/appName/id1002185140"
        target="_blank"
      >
        iOS
      </a>
        or
      <a
        href="https://play.google.com/store/apps/details?id=com.hylo.hyloandroid"
        target="_blank"
      >
        Android
      </a>
       app to receive push notifications.
    </p>
  </div>
</div>
`;

exports[`SettingsIcon renders correctly 1`] = `
<Icon
  data-stylename="icon highlightIcon"
  name="EmailNotification"
  onClick={[Function]}
/>
`;

exports[`SettingsRow renders correctly 1`] = `
<div
  data-stylename="settingsRow"
>
  <div
    data-stylename="nameRow"
  >
    <div
      data-stylename="groupAvatar"
      style={Object {}}
    />
    <span
      data-stylename="name"
    />
    <Icon
      data-stylename="arrowIcon"
      name="ArrowDown"
      onClick={[Function]}
    />
  </div>
</div>
`;
